termine la documentacion de la app con swagger y aplique autentificacion por middleware
