# back/src/config/swagger.yml
@@ -10,7 +10,7 @@ tags:
   - name: Todo
     description: Everything about your Todos
 paths:
-  /api/todo:
+  /api/todos:
     get:
       tags:
         - Todo
@@ -29,9 +29,34 @@ paths:
         '500':
           description: Internal Server Error
       security:
-        - token:
-          - token
-  /api/todo/{id}:
+        - token: []
+  
+    post:
+      tags:
+        - Todo
+      summary: Add a new todo to the store
+      description: Add a new todo to the store
+      operationId: createTodo
+      requestBody:
+        description: Create a new pet in the store
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Todo'
+        required: true
+      responses:
+        '201':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TodosResponse'          
+        
+        '500':
+          description: Internal Server Error
+      security:
+        - token: []
+  /api/todos/{id}:
     get:
       tags:
         - Todo
@@ -58,9 +83,8 @@ paths:
         '500':
           description: Internal Server Error
       security:
-        - token:
-          - token
-  /api/todos/{id}:
+        - token: []
+  
     put:
       tags:
         - Todo
@@ -95,8 +119,7 @@ paths:
         '500':
           description: Internal Server Error
       security:
-        - token:
-          - token
+        - token: []
     delete:
       tags:
         - Todo
@@ -120,222 +143,95 @@ paths:
           description: Todo not exist
         '500':
           description: Internal Server Error
-          
-          
       security:
-        - token:
-          - token
+        - token: []
             
-  /api/todos:
+  
+          
+  /users/register:
     post:
       tags:
-        - Todo
-      summary: Add a new todo to the store
-      description: Add a new todo to the store
-      operationId: createTodo
-      requestBody:
-        description: Create a new pet in the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Todo'
-        required: true
-      responses:
-        '201':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TodosResponse'          
-        
-        '500':
-          description: Internal Server Errorn
-      security:
-        - token:
-          - token
-  /user:
-    post:
-      tags:
-        - user
-      summary: Create user
+        - User
+      summary: Register user
       description: This can only be done by the logged in user.
-      operationId: createUser
+      operationId: registerUser
       requestBody:
         description: Created user object
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
       responses:
-        default:
+        '201':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
-  /user/createWithList:
+                $ref: '#/components/schemas/UserResponse'
+        '404':
+          description: User already exists
+        '500':
+          description: Internal Server Error
+      
+  /users/login:
     post:
       tags:
-        - user
-      summary: Creates list of users with given input array
-      description: Creates list of users with given input array
-      operationId: createUsersWithListInput
+        - User
+      summary: Login user
+      operationId: loginUser
       requestBody:
         content:
           application/json:
             schema:
-              type: array
-              items:
                 $ref: '#/components/schemas/User'
       responses:
-        '200':
+        '201':
           description: Successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'          
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
-        default:
-          description: successful operation
-  /user/login:
-    get:
-      tags:
-        - user
-      summary: Logs user into the system
-      description: ''
-      operationId: loginUser
-      parameters:
-        - name: username
-          in: query
-          description: The user name for login
-          required: false
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: The password for login in clear text
-          required: false
-          schema:
-            type: string
-      responses:
-        '200':
-          description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
-          content:
-            application/xml:
-              schema:
-                type: string
-            application/json:
-              schema:
-                type: string
+                $ref: '#/components/schemas/UserResponse'    
         '400':
-          description: Invalid username/password supplied
-  /user/logout:
+          description: Email and password are required
+        '401':
+          description: User already not exists
+        '404':
+          description: Invalid password
+        '500':
+          description: Internal Server Error
+      
+        
+  /users/logout:
     get:
       tags:
-        - user
-      summary: Logs out current logged in user session
-      description: ''
+        - User
+      summary: Logout user into the system
       operationId: logoutUser
-      parameters: []
       responses:
-        default:
-          description: successful operation
-  /user/{username}:
+        '200':
+          description: Logout
+        '500':
+          description: Internal Server Error
+      
+  /users:
     get:
       tags:
-        - user
-      summary: Get user by user name
-      description: ''
-      operationId: getUserByName
-      parameters:
-        - name: username
-          in: path
-          description: 'The name that needs to be fetched. Use user1 for testing. '
-          required: true
-          schema:
-            type: string
+        - User
+      summary: Get users
+      operationId: getUsers
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'          
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/User'
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found
-    put:
-      tags:
-        - user
-      summary: Update user
-      description: This can only be done by the logged in user.
-      operationId: updateUser
-      parameters:
-        - name: username
-          in: path
-          description: name that need to be deleted
-          required: true
-          schema:
-            type: string
-      requestBody:
-        description: Update an existent user in the store
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/User'
-          application/x-www-form-urlencoded:
-            schema:
-              $ref: '#/components/schemas/User'
-      responses:
-        default:
-          description: successful operation
-    delete:
-      tags:
-        - user
-      summary: Delete user
-      description: This can only be done by the logged in user.
-      operationId: deleteUser
-      parameters:
-        - name: username
-          in: path
-          description: The name that needs to be deleted
-          required: true
-          schema:
-            type: string
-      responses:
-        '400':
-          description: Invalid username supplied
-        '404':
-          description: User not found
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'  
+        '500':
+          description: Internal Server Error
+     
+          
 components:
   schemas:
     User:
@@ -390,6 +286,6 @@ components:
               $ref: '#/components/schemas/User'
   securitySchemes:
     token:
-      type: apiKey
-      name: token
-      in: header
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
