# back/src/routes/users.Routes.ts
@@ -2,16 +2,20 @@ import { Router } from "express";
 import { Request, Response } from "express";
 
 import { getUsers, loginUser, registerUSAuth0, registerUser } from "../controllers/users";
+import authMiddleware from "../middleware/authBearer";
 
 const usRT = Router();
 
-
 usRT.post("/register", registerUser);
 
-usRT.get("/login", loginUser);
+usRT.post("/login", loginUser);
 
 usRT.get("/logout", (req, res) => {
-  res.status(200).send("Logout");
+  try {
+    res.status(200).send("Logout");
+  } catch (error) {
+    res.status(500).send("Internal Server Error");
+  }
 });
 usRT.get("/users", getUsers);
 
